--- a/client/svgcanvas.html
+++ b/client/svgcanvas.html
@@ -9,7 +9,6 @@
 	<script src="ui/jquery.ui.widget.js"></script>
 	<script src="ui/jquery.ui.mouse.js"></script>
 	<script src="ui/jquery.ui.draggable.js"></script>
-	
 	<!--
 	<link href="css/reset.css" rel="stylesheet" type="text/css">
 	<link href="css/layout.css" rel="stylesheet" type="text/css">
@@ -18,6 +17,7 @@
 	<script src="js/jquery.svg.js" type="text/javascript" ></script>
 	<script src="js/jquery-ui.js" type="text/javascript" ></script>
 	<script src="js/jquery.js" type="text/javascript" ></script>
+
 </head>  
  
 <link rel="stylesheet" type="text/css" href="rank.css"/>
@@ -30,7 +30,6 @@
 -->
 
 <br> 
-<div id="svgDiv">
 <svg id="circleCanvas" xmlns="http://www.w3.org/2000/svg" 
     xmlns:xlink="http://www.w3.org/1999/xlink"
     xmlns:svg="http://www.w3.org/2000/svg"
@@ -41,8 +40,7 @@
   <rect x="0" y="0" width="1050" height="1050" 
         fill="yellow" stroke="blue" stroke-width="12"> 
  </rect>
-    <script xlink:href="js/SVGPan.js"></script>
-    <g id="viewport" transform="translate(525,490) scale(1,-1)" >
+    <g id="svgCanvas" transform="translate(525,490) scale(1,-1)" >
       <circle id="majorCircle" cx="0" cy="0" r="480" stroke="blue" fill="white"
         stroke-width="3"> 
       </circle>        
@@ -67,13 +65,10 @@
       </rect>
     </g>  
 </svg>
-</div>
   <text id="rankText" x="-200" y="90" font-family="Arial" font-size="30" color="blue" opacity="1" visibility="visible">Your rank is: 1</text>
   <text id="angleText" x="-200" y="130" font-family="Arial" font-size="30" color="blue" opacity="1" visibility="visible"></text>
   <text id="msgText" x="-200" y="170" font-family="Arial"   font-size="30" color="blue" opacity="1" visibility="visible"></text>
     
-
-
 <script src="clientsvg.js"></script>
 <script>
 	 $(document).ready(function() {
