--- a/client/svgcanvas.html
+++ b/client/svgcanvas.html
@@ -17,48 +17,74 @@
 	<script src="js/jquery.svg.js" type="text/javascript" ></script>
 	<script src="js/jquery-ui.js" type="text/javascript" ></script>
 	<script src="js/jquery.js" type="text/javascript" ></script>
-
 </head>  
  
 <link rel="stylesheet" type="text/css" href="rank.css"/>
 
+<table border=1 width="100%" height="100%">
+
+<tr>
+<td style="width:65%; height=100%;padding:0px;">
+
 <svg id="circleCanvas" xmlns="http://www.w3.org/2000/svg" 
     xmlns:xlink="http://www.w3.org/1999/xlink"
     xmlns:svg="http://www.w3.org/2000/svg"
-    xml:space="preserve"
-    width="100%" height="100%" 
-   viewBox= "200,-30,1050,1050">
- <!-- 
-  <g fill="none" stroke="black" stroke-width="3">
-  	<line x1="0" y1="1.5" x2="1050" y2="1.5"></line>
-  	<line x1="1.5" y1="0" x2="1.5" y2="1050"></line>  	
-  </g>  
-  -->
-    <g id="svgCanvas" transform="translate(525,490) scale(1,-1)" >
-      <circle id="majorCircle" cx="0" cy="0" r="480" stroke="blue" fill="white"
+    xml:space="preserve" style="height: 1024px!important;width:1024px!important;">
+
+    <g id="svgCanvas" transform="translate(470,400) scale(1,-1)" style="position:absolute" >
+      <circle id="majorCircle" cx="0" cy="0" r="380" stroke="blue" fill="white"
         stroke-width="3"> 
       </circle>        
-      <circle id="targetCircle" cx="0" cy="480" r="4" stroke="green" fill="none"
+      <circle id="targetCircle" cx="0" cy="380" r="4" stroke="green" fill="none"
         stroke-width="4">
       </circle>
-      <circle id="currentGuess" cx="0" cy="480" r="4" stroke="red" fill="none"
+      <circle id="currentGuess" cx="0" cy="380" r="4" stroke="red" fill="none"
         stroke-width="4">
         <animate attributeName="r" to="18" dur="1s" repeatCount="3">
       </circle>
         
-      <line id="angleLine" x1="0" y1="0" x2="0" y2="480" stroke="green" fill="none" stroke-width="2">
+      <line id="angleLine" x1="0" y1="0" x2="0" y2="380" stroke="green" fill="none" stroke-width="2">
       </line>	
       
-      <rect x="475" y="-5" height="10" width="10" fill="none" stroke="black">
+      <rect x="375" y="-5" height="10" width="10" fill="none" stroke="black">
       </rect>
-      <rect x="-485" y="-5" height="10" width="10" fill="none" stroke="black">
+      <rect x="-385" y="-5" height="10" width="10" fill="none" stroke="black">
       </rect>
-      <rect x="-5" y="475" height="10" width="10" fill="none" stroke="black">
+      <rect x="-5" y="375" height="10" width="10" fill="none" stroke="black">
       </rect>
-      <rect x="-5" y="-485" height="10" width="10" fill="none" stroke="black">
+      <rect x="-5" y="-385" height="10" width="10" fill="none" stroke="black">
       </rect>
-    </g>  
+    </g> 
 </svg>
+</td>
+<td style="vertical-align:top">
+<text id="instructions" style="font-size:18;font-family: Arial;">
+<p>Welcome to our guessing game. The purpose of the game is to find out the location
+of a hidden point that we have randomly positioned on the blue circle to the left.
+You will compete with other players, and your performance, as well as reward, 
+will be based on how close your guess is to the hidden point, compared to others.</p>
+
+<p>The game consists of 10 rounds. During each round, you have to make a guess 
+by moving the green line around the circle and clicking on a desired position. A round 
+finishes when all players have made their choices.</p>
+
+<p>
+ At the beginning of each round, you will be
+ informed of your relative ranking. Your rank is 1 if you are the player currently 
+ closest to the hidden point. Conversely, if you are farthest from the point, you rank
+ last.
+</p>
+
+<p>
+
+</p>
+
+</text>
+
+</td>
+</tr>
+</table>
+
 
   <text id="rankText" x="-200" y="90" font-family="Arial" font-size="30" color="blue" opacity="1" visibility="visible">Your rank is: 1</text>
   <text id="angleText" x="-200" y="130" font-family="Arial" font-size="30" color="blue" opacity="1" visibility="visible"></text>
