--- a/client/svgcanvas.html
+++ b/client/svgcanvas.html
@@ -17,6 +17,10 @@
 	<script src="js/jquery.svg.js" type="text/javascript" ></script>
 	<script src="js/jquery-ui.js" type="text/javascript" ></script>
 	<script src="js/jquery.js" type="text/javascript" ></script>
+	<script>
+		console.log(screen.availHeight)		
+    </script>
+
 </head>  
  
 <link rel="stylesheet" type="text/css" href="rank.css"/>
@@ -29,9 +33,9 @@
 <svg id="circleCanvas" xmlns="http://www.w3.org/2000/svg" 
     xmlns:xlink="http://www.w3.org/1999/xlink"
     xmlns:svg="http://www.w3.org/2000/svg"
-    xml:space="preserve" style="height: 1024px!important;width:910px!important;">
+    xml:space="preserve" style="height: 788px!important;width:910px!important;">
 
-    <g id="svgCanvas" transform="translate(470,400) scale(1,-1)" style="position:absolute" >
+    <g id="svgCanvas" transform="translate(470,395) scale(1,-1)" style="position:absolute" >
       <circle id="majorCircle" cx="0" cy="0" r="380" stroke="blue" fill="white"
         stroke-width="3"> 
       </circle>        
@@ -74,12 +78,13 @@ finishes when all players have made their choices.</p>
  closest to the hidden point. Conversely, if you are farthest from the point, you rank
  last.
 </p>
-
-<p>
-
-</p>
-
 </text>
+<br><br><br><br><br><br><br>
+<button type="button" style="margin-left:20px">Previous</button>
+<button type="button" style="margin-left:330px">Next</button>
+
+
+
 
 </td>
 </tr>
