--- a/client/svgcanvas.html
+++ b/client/svgcanvas.html
@@ -4,104 +4,76 @@
 
 <head>
 	<title>Rank Experiment</title>
+<!--
 	<script src="jquery.js"></script>
 	<script src="ui/jquery.ui.core.js"></script>
 	<script src="ui/jquery.ui.widget.js"></script>
 	<script src="ui/jquery.ui.mouse.js"></script>
 	<script src="ui/jquery.ui.draggable.js"></script>
+-->
 	<!--
 	<link href="css/reset.css" rel="stylesheet" type="text/css">
 	<link href="css/layout.css" rel="stylesheet" type="text/css">
 	<link href="css/style.css" rel="stylesheet" type="text/css">
 	-->
+	<!--
 	<script src="js/jquery.svg.js" type="text/javascript" ></script>
 	<script src="js/jquery-ui.js" type="text/javascript" ></script>
 	<script src="js/jquery.js" type="text/javascript" ></script>
-	<script>
-		var windowWidth = window.innerWidth
-		var windowHeight = window.innerHeight
-	</script>
+	-->
 
 </head>  
  
 <link rel="stylesheet" type="text/css" href="rank.css"/>
 
-<table border=1 width="100%" height="100%">
+<div style="width:100%;height:100%">
+	<div>
+		<textarea id="rankText" readonly="readonly" style="text-align:center;height:6%;width:100%;font-size:30px;"></textarea>
+	</div>
+	<div style="height:100%;width:60%;float:left;">
+		<svg id="circleCanvas" xmlns="http://www.w3.org/1999/xhtml" 
+		     xmlns:svg="http://www.w3.org/2000/svg" 
+		     style="height:100%;width:100%;overflow:visible;"
+		 >
+          <g id="svgCanvas" transform="translate(470,375) scale(1,-1)" style="overflow:visible;">
+		     <circle id="majorCircle" cx="0" cy="0" r="370" stroke="blue" fill="white"
+        	 stroke-width="3"></circle>        
+             <circle id="targetCircle" cx="0" cy="370" r="4" stroke="green" fill="none"
+              stroke-width="4"></circle>
+             <circle id="currentGuess" cx="0" cy="370" r="4" stroke="red" fill="none"
+             stroke-width="4">
+               <animate attributeName="r" to="18" dur="0s" repeatCount="3"></animate>
+            </circle>
+            <line id="angleLine" x1="0" y1="0" x2="0" y2="370" stroke="green" fill="none" stroke-width="2">
+            </line>	
+        	</rect>
+        	</g> 
+        </svg>
+	</div>
+	<div style="height:100%;width:35%;float:left;">
+		<div style="height:70%;width:100%;">
+			<textarea id="instructions" readonly="readonly" style="height:100%;width:100%;">
+			</textarea>
+		
+		</div>
+		<div style="height:30%;width:100%;float:left;">
+			<div style="height:100%;width:50%;float:left;">
+				<button id="previous" type="button">Previous</button>
+			</div>
+			<div style="height:100%;width:50%;float:left">
+     			<button id="next" type="button">Next</button>
+			</div>
+		</div
 
-<tr>
-<td style="width:65%; height=100%;padding:0px;">
+	</div
+	
+</div>
 
-<svg id="circleCanvas" xmlns="http://www.w3.org/2000/svg" 
-    xmlns:xlink="http://www.w3.org/1999/xlink"
-    xmlns:svg="http://www.w3.org/2000/svg"
-    xml:space="preserve" style="height:788px!important;width:1010px!important;">
-
-    <g id="svgCanvas" transform="translate(470,375) scale(1,-1)" style="position:absolute" >
-      <circle id="majorCircle" cx="0" cy="0" r="370" stroke="blue" fill="white"
-        stroke-width="3"> 
-      </circle>        
-      <circle id="targetCircle" cx="0" cy="370" r="4" stroke="green" fill="none"
-        stroke-width="4">
-      </circle>
-      <circle id="currentGuess" cx="0" cy="370" r="4" stroke="red" fill="none"
-        stroke-width="4">
-        <animate attributeName="r" to="18" dur="1s" repeatCount="3">
-      </circle>
-        
-      <line id="angleLine" x1="0" y1="0" x2="0" y2="370" stroke="green" fill="none" stroke-width="2">
-      </line>	
-      
-      <rect x="365" y="-5" height="10" width="10" fill="none" stroke="black">
-      </rect>
-      <rect x="-375" y="-5" height="10" width="10" fill="none" stroke="black">
-      </rect>
-      <rect x="-5" y="365" height="10" width="10" fill="none" stroke="black">
-      </rect>
-      <rect x="-5" y="-375" height="10" width="10" fill="none" stroke="black">
-      </rect>
-    </g> 
-</svg>
-</td>
-<td style="vertical-align:top">
-<text id="instructions" style="font-size:18;font-family: Arial;">
-<p>Welcome to our guessing game. The purpose of the game is to find out the location
-of a hidden point that we have randomly positioned on the blue circle to the left.
-You will compete with other players, and your performance, as well as reward, 
-will be based on how close your guess is to the hidden point, compared to others.</p>
-
-<p>The game consists of 10 rounds. During each round, you have to make a guess 
-by moving the green line around the circle and clicking on a desired position. A round 
-finishes when all players have made their choices.</p>
-
-<p>
- At the beginning of each round, you will be
- informed of your relative ranking. Your rank is 1 if you are the player currently 
- closest to the hidden point. Conversely, if you are farthest from the point, you rank
- last.
-</p>
-
-<p>
- Click "Next" for a quick practice.
-</p>
-</text>
-<br><br><br><br><br><br><br>
-<button id="previous" type="button" style="margin-left:20px">Previous</button>
-<button id="next" type="button" style="margin-left:330px">Next</button>
-
-</td>
-</tr>
-</table>
-
-<!--
-  <text id="rankText" x="-200" y="90" font-family="Arial" font-size="30" color="blue" opacity="1" visibility="visible">Your rank is: 1</text>
-  <text id="angleText" x="-200" y="130" font-family="Arial" font-size="30" color="blue" opacity="1" visibility="visible"></text>
-  <text id="msgText" x="-200" y="170" font-family="Arial"   font-size="30" color="blue" opacity="1" visibility="visible"></text>
--->    
 <script src="clientsvg.js"></script>
 <script>
-	 $(document).ready(function() {
-    	new rank_experiment()
-    });	
+	window.onload = function() {
+		new rank_experiment()
+	}
 </script>
 
 
