--- a/client/index.html
+++ b/client/index.html
@@ -4,24 +4,7 @@
 
 <head>
 	<title>Rank Experiment</title>
-<!--
-	<script src="jquery.js"></script>
-	<script src="ui/jquery.ui.core.js"></script>
-	<script src="ui/jquery.ui.widget.js"></script>
-	<script src="ui/jquery.ui.mouse.js"></script>
-	<script src="ui/jquery.ui.draggable.js"></script>
--->
-	<!--
-	<link href="css/reset.css" rel="stylesheet" type="text/css">
-	<link href="css/layout.css" rel="stylesheet" type="text/css">
-	<link href="css/style.css" rel="stylesheet" type="text/css">
-	-->
-	<!--
-	<script src="js/jquery.svg.js" type="text/javascript" ></script>
-	<script src="js/jquery-ui.js" type="text/javascript" ></script>
 	<script src="js/jquery.js" type="text/javascript" ></script>
-	-->
-
 </head>  
  
 <link rel="stylesheet" type="text/css" href="rank.css"/>
@@ -73,12 +56,11 @@
 	</div
 	
 </div>
-
 <script src="clientsvg.js"></script>
 <script>
-	window.onload = function() {
+	$(document).ready(function () {
 		new rank_experiment()
-	}
+	})
 </script>
 
 
