--- a/client/index.html
+++ b/client/index.html
@@ -15,8 +15,13 @@
 	</div>
 	
 	<div id="gameTextDiv" style="height:100%;width:0.5%;float:left;">
-		<span id="gameText"></span>
-		<span id="textareaspan" class="websymbols"></span>		
+		<div id="playerinfo" style="height:10%;width=100%;float:left;">
+			<span id="gameText"></span>
+			<span id="textareaspan" class="websymbols"></span>
+		</div>
+		<div id="miscinfo" style="height=90%;width=100%;float:left;">
+			<span id="miscinfotext"></span>
+		</div>
 	</div>
 	
 	<div id="circleCanvasDiv" style="height:100%;width:60%;float:left;">
@@ -31,7 +36,7 @@
               stroke-width="4"></circle>
              <circle id="currentGuess" cx="0" cy="345" r="4" stroke="red" fill="none"
              stroke-width="4">
-               <animate attributeName="r" to="10" dur="0s" repeatCount="3"></animate>
+               <animate attributeName="r" to="10" repeatCount="3"></animate>
             </circle>
             <line id="angleLine" x1="0" y1="0" x2="0" y2="345" stroke="green" fill="none" stroke-width="2">
             </line>	
@@ -40,16 +45,19 @@
         </svg>
 	</div>
 	<div id="instructionsDiv"style="height:100%;width:35%;float:left;">
-		<div style="height:70%;width:100%;">
+		<div style="height:60%;width:100%;">
 			<textarea id="instructions" readonly="readonly" style="height:100%;width:100%;">
-			</textarea>
-		
+			</textarea>		
+		</div>
+		<div style="height:10%; width:100%">
+			<fieldset id="inputs">
+				<input id="username" type="text" placeholder="Enter your username" autofocus required  data-icon="u">
+			</fieldset>
 		</div>
 		<div style="height:30%;width:100%;float:left;">
 			<div style="height:100%;width:50%;float:left;">
      			<button id="previous" class="prevbutton" type="button">
-     			<span class="prevbuttontext"><</span>Prev</button>
-     			
+     			<span class="prevbuttontext"><</span>Prev</button>     			
 			</div>			
 			<div style="height:100%;width:50%;float:right">			   
      			<button id="next" class="nextbutton" type="button">
