--- a/client/svgcanvas.html
+++ b/client/svgcanvas.html
@@ -31,7 +31,7 @@
               stroke-width="4"></circle>
              <circle id="currentGuess" cx="0" cy="345" r="4" stroke="red" fill="none"
              stroke-width="4">
-               <animate attributeName="r" to="10" dur="0s" repeatCount="3"></animate>
+               <animate attributeName="r" to="10" repeatCount="3"></animate>
             </circle>
             <line id="angleLine" x1="0" y1="0" x2="0" y2="345" stroke="green" fill="none" stroke-width="2">
             </line>	
@@ -42,14 +42,12 @@
 	<div id="instructionsDiv"style="height:100%;width:35%;float:left;">
 		<div style="height:70%;width:100%;">
 			<textarea id="instructions" readonly="readonly" style="height:100%;width:100%;">
-			</textarea>
-		
+			</textarea>		
 		</div>
 		<div style="height:30%;width:100%;float:left;">
 			<div style="height:100%;width:50%;float:left;">
      			<button id="previous" class="prevbutton" type="button">
-     			<span class="prevbuttontext"><</span>Prev</button>
-     			
+     			<span class="prevbuttontext"><</span>Prev</button>     			
 			</div>			
 			<div style="height:100%;width:50%;float:right">			   
      			<button id="next" class="nextbutton" type="button">
