--- a/client/index.html
+++ b/client/index.html
@@ -4,10 +4,14 @@
 
 <head>
 	<title>Rank Experiment</title>
+	<script type="text/javascript"></script>
+	<noscript>Sorry, you need a Javascript-enabled browser to participate in the experiment</noscript>
 	<script src="js/jquery.js" type="text/javascript" ></script>
+	
 </head>  
  
 <link rel="stylesheet" type="text/css" href="rank.css"/>
+
 
 <div style="width:100%;height:100%">
 	<div style="height:6%;width:100%;float:left;">
@@ -15,11 +19,11 @@
 	</div>
 	
 	<div id="gameTextDiv" style="height:100%;width:0.5%;float:left;">
-		<div id="playerinfo" style="height:10%;width=100%;float:left;">
+		<div id="playerinfo" style="height:10%;width:100%;float:left;">
 			<span id="gameText"></span>
 			<span id="textareaspan" class="websymbols"></span>
 		</div>
-		<div id="miscinfo" style="height=90%;width=100%;float:left;">
+		<div id="miscinfo" style="height:90%;width:100%;float:left;">
 			<span id="miscinfotext"></span>
 		</div>
 	</div>
@@ -45,8 +49,8 @@
         </svg>
 	</div>
 	<div id="instructionsDiv"style="height:100%;width:35%;float:left;">
-		<div style="height:60%;width:100%;">
-			<textarea id="instructions" readonly="readonly" style="height:100%;width:100%;">
+		<div style="height:75%;width:100%;">
+			<textarea class="textarea_vScrollBar" id="instructions" readonly="readonly" style="height:100%;width:100%;">
 			</textarea>		
 		</div>
 		<div style="height:10%; width:100%">
@@ -54,7 +58,7 @@
 				<input id="username" type="text" placeholder="Enter your username" autofocus required  data-icon="u">
 			</fieldset>
 		</div>
-		<div style="height:30%;width:100%;float:left;">
+		<div style="height:15%;width:100%;float:left;">
 			<div style="height:100%;width:50%;float:left;">
      			<button id="previous" class="prevbutton" type="button">
      			<span class="prevbuttontext"><</span>Prev</button>     			
@@ -68,6 +72,7 @@
 	</div
 	
 </div>
+
 <script src="clientsvg.js"></script>
 <script>
 	$(document).ready(function () {
