--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,15 @@
 
 <div style="width:100%;height:100%">
 	<div style="height:6%;width:100%;float:left;">
+		<div style="height:100%;width:85%;float:left;">
 		<textarea id="rankText" readonly="readonly" style="text-align:center;height:100%;width:100%;font-size:30px;"></textarea>
+		</div>
+		<div style="height:100%;width:10%;float:left;">
+			<textarea id="timeleft" readonly="readonly" style="text-align:left;font-size:30px;"></textarea>
+		</div>
+		<div style="height:100%;width:5%;float:right;font-size:30px;">
+			<textarea id="timer" readonly="readonly" style="text-align:left;font-size:30px;"></textarea>
+		</div>	
 	</div>
 	
 	<div id="gameTextDiv" style="height:100%;width:0.5%;float:left;">
