--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" type="text/css" href="rank.css"/>
 
 
-<div style="width:100%;height:100%">
+<div style="width:100%;height:100%;">
 	<div style="height:6%;width:100%;float:left;">
 		<div style="height:100%;width:80%;float:left;">
 		<textarea id="rankText" readonly="readonly" style="text-align:center;height:100%;width:100%;font-size:30px;"></textarea>
